tests/ui/lowering/cont-in-block/cont-in-match-arm-issue-121623.stderr
error[E0696]: `continue` pointing to a labeled block
  --> $DIR/cont-in-match-arm-issue-121623.rs:6:13
   |
LL |           _ => 'b: {
   |  ______________-
LL | |             continue 'b;
   | |             ^^^^^^^^^^^ labeled blocks cannot be `continue`'d
LL | |
LL | |         }
   | |_________- labeled block the `continue` points to

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0696`.
