tests/ui/lowering/cont-in-block/cont-in-match-arm-issue-121623.rs
// Fixes: #121623

fn main() {
    match () {
        _ => 'b: {
            continue 'b;
            //~^ ERROR [E0696]
        }
    }
}
